Allow absolute path for cache-config-file (#45416)
Closes #19374

Signed-off-by: stianst <stianst@gmail.com>